[package]
name = "lineselect"
version = "0.1.0"
edition = "2021"
description = "Interactive Line Selector"
authors = ["Gilson Urbano <hello@gilsonurbano.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/urbanogilson/lineselect"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.3.11"
colored = "2.0.4"
dialoguer = "0.10.4"
