[package]
name = "lineselect"
version = "0.1.1"
edition = "2021"
description = "Interactive Line Selector"
authors = ["Gilson Urbano <hello@gilsonurbano.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/urbanogilson/lineselect"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.27"
colored = "3.0.0"
dialoguer = "0.11.0"
